Adiciona no_bundle à configuração

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,7 @@ compatibility_date = "2020-12-17"
 name = "barra-global"
 main = "./worker.js"
 compatibility_date = "2025-04-29"
+no_bundle = true
 
 workers_dev = false
 route = { pattern = "pcdomanual.com/*", zone_name = "pcdomanual.com" }
