--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,4 +3,13 @@ main = "./worker.js"
 compatibility_date = "2025-04-29"
 no_bundle = true
 workers_dev = false
-route = { pattern = "*.pcdomanual.com/*", zone_name = "pcdomanual.com" }
+route = [
+	{ pattern = "pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "wallabag.pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "marreta.pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "sintoniza.pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "ti.pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "lerama.pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "busca.pcdomanual.com/*", zone_name = "pcdomanual.com" },
+	{ pattern = "linkding.pcdomanual.com/*", zone_name = "pcdomanual.com" }
+]
